<resources>
    <string name="app_name">MEDICAL APPLICATION</string>
    <string name="loginInstructText">LOGIN</string>
    <string name="nameHint">Enter Username</string>
    <string name="passHint">Enter Password</string>
    <string name="loginBtnText">Login</string>
    <string name="registerHintText">New User? Register Here</string>
    <string name="emailHint">Enter Email</string>
    <string name="passconfirmHint">Re-Enter Password</string>
    <string name="registerBtnText">Register</string>
    <string name="registerInstructText">REGISTER</string>
    <string name="loginHintText">Already a User? Login</string>
    <string name="labtestText">LAB TEST</string>
    <string name="buyMedsText">BUY MEDICINE</string>
    <string name="findDocText">FIND DOCTORS</string>
    <string name="healthArticleText">HEALTH ARTICLES</string>
    <string name="orderDetText">ORDERS</string>
    <string name="logoutText">LOG OUT</string>
    <string name="spInstructText">Available Specialists</string>
    <string name="neurologistText">NEUROLOGIST</string>
    <string name="gyneacologistText">GYNECOLOGIST</string>
    <string name="physicianText">PHYSICIAN</string>
    <string name="dentistText">DENTIST</string>
    <string name="dieticianText">DIETITIAN</string>
    <string name="surgeonText">SURGEON</string>
    <string name="defInstructText">default</string>
    <string name="appointmentBtnText">Set Appointment</string>
    <string name="mornApptTime">9:00 AM</string>
    <string name="evenApptTime">6:00 PM</string>
    <string name="timeEntryInstructText">Available Time Slots</string>
    <string name="doctorAvailabilityText">Note: Doctors are available on all days, except on weekends and national holidays</string>
    <string name="confirmBtnText">Confirm Appointment</string>
    <string name="dateInstructText">Please choose Date and Time to Schedule an appointment</string>
    <string name="labTestInstructText">Available Lab Tests/Checks</string>
    <string name="bloodTestText">BLOOD TEST</string>
    <string name="urineTestText">URINE TEST</string>
    <string name="semenTestText">SEMEN TEST</string>
    <string name="fecalTestText">FECAL TEST</string>
    <string name="bloodsugarCheckText">BLOOD SUGAR \nCHECK</string>
    <string name="bloodpressureCheckText">BLOOD PRESSURE \nCHECK</string>
    <string name="testTypeText">Type of Test/Check: </string>
    <string name="collectionText">Modes of Collection: </string>
    <string name="basefeeText">Base Fee: </string>
    <string name="homefeeText">Extra Fee for Home Collection: </string>
    <string name="dateTestInstructText">Please choose Date and Time to Schedule a test/check</string>
    <string name="testAvailabilityText">Note: Tests/Checks are available on all days, except on weekends and national holidays</string>
    <string name="collecModeInstructText">Choose Collection Mode</string>
    <string name="atHomeCollecText">At Home</string>
    <string name="walkinCollecText">Walk-in</string>
    <string name="totalInstructText">Grand Total: </string>
    <string name="checkoutBtnText">Checkout</string>
    <string name="cartBtnText">Go To Cart</string>
    <string name="avaMedInstructText">Available Medicines</string>
    <string name="cartInstructText">Medicine Cart</string>
    <string name="addBtnText">+</string>
    <string name="subBtnText">-</string>
    <string name="invoiceTextInstruct">Invoice Number: </string>
    <string name="medname">Name</string>
    <string name="medprice">Price</string>
    <string name="orderqty">Qty Ordered</string>
    <string name="total">Total</string>
    <string name="orderDetInstructText">My Orders</string>
    <string name="orderDateInstructText">Order Date: </string>
    <string name="detBtnText">View Details</string>
    <string name="orderDetTitleText">Order Details</string>
    <string name="healthArtInstruct">Top Health Articles</string>
    <string name="readPromptText">Read</string>
    <string name="appointmentsCardText">APPOINTMENTS</string>
    <string name="appointInstructText">My Appointments</string>
    <string name="appntDateText">Appointment Date:</string>
    <string name="appntTimeText">Appointment Time:</string>
    <string name="remindBtnText">Remind Me</string>
    <string name="emptyOrder">No orders made</string>
    <string name="emptyAppoints">No appointments made</string>
    <string name="emptyAppts">No appointments made</string>
    <string name="cancelBtnText">Cancel Order</string>
</resources>