<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Test_CheckActivity"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:drawableTop="@drawable/app_logo" />

                <TextView
                    android:id="@+id/testCheckInstruct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="0dp"
                    android:text="@string/defInstructText"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="24sp" />

                <RelativeLayout
                    android:id="@+id/infoLay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/testCheckInstruct"
                    android:layout_marginTop="20dp"
                    android:padding="20dp">

                    <LinearLayout
                        android:id="@+id/testTypeLay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/testType"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/testTypeText"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            />

                        <TextView
                            android:id="@+id/testTypeResult"
                            android:layout_width="wrap_content"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/defInstructText"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/collecModeLay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/testTypeLay"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/collectionMode"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/collectionText"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/collecModeResult"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/defInstructText"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/baseFeeLay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/collecModeLay"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/baseFee"
                            android:textColor="@color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/basefeeText"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/baseFeeResult"
                            android:layout_width="wrap_content"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/defInstructText"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/homeFeeLay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/baseFeeLay"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/homeFee"
                            android:layout_width="wrap_content"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:text="@string/homefeeText"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/homeFeeResult"
                            android:layout_width="wrap_content"
                            android:textColor="@color/black"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/defInstructText"
                            android:textSize="16sp" />
                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/dateInstruct"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/infoLay"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/dateTestInstructText"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <CalendarView
                    android:id="@+id/dateEntry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dateInstruct"
                    android:layout_centerHorizontal="true"
                    android:theme="@style/CalenderViewCustom"
                    android:dateTextAppearance="@style/CalenderViewDateCustomText"
                    android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:inputType="date" />

                <TextView
                    android:id="@+id/collecModeInstruct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_below="@id/timeslotRG"
                    android:layout_centerHorizontal="true"
                    android:text="@string/collecModeInstructText"
                    android:textSize="20sp"
                    android:layout_marginTop="16dp"/>

                <RadioGroup
                    android:id="@+id/collecModeRG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/collecModeInstruct"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        style="@style/RadioButtonCustom"
                        android:layout_marginEnd="20dp"
                        android:id="@+id/walkinRadio"
                        android:buttonTint="@color/btnBG"
                        android:text="@string/walkinCollecText" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        style="@style/RadioButtonCustom"
                        android:id="@+id/atHomeRadio"
                        android:buttonTint="@color/btnBG"
                        android:text="@string/atHomeCollecText" />
                </RadioGroup>


                <TextView
                    android:id="@+id/timeInstruct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_below="@id/dateEntry"
                    android:layout_centerHorizontal="true"
                    android:text="@string/timeEntryInstructText"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/timeslotRG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/timeInstruct"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_marginEnd="20dp"
                        style="@style/RadioButtonCustom"
                        android:buttonTint="@color/btnBG"
                        android:text="@string/mornApptTime" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:textColor="@color/black"
                        style="@style/RadioButtonCustom"
                        android:layout_height="wrap_content"
                        android:text="@string/evenApptTime"
                        android:buttonTint="@color/btnBG"
                        />
                </RadioGroup>

                <LinearLayout
                    android:id="@+id/totalCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/collecModeRG"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/totalInstruct"
                        android:layout_width="wrap_content"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"
                        android:text="@string/totalInstructText"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/totalResult"
                        android:layout_width="wrap_content"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/defInstructText"
                        android:textSize="26sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/docAvailabilityInstruct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/totalCost"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:text="@string/testAvailabilityText"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/checkoutBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/docAvailabilityInstruct"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/btnBG"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:text="@string/checkoutBtnText"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    />
            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>